# giki

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  wiki-review.yml
docs/: README-CN.md
docs/screenshots/: DEMO-GUIDE.md  MAC-DEMO-GUIDE.md
kbase/: .gitignore  README.md  index.md  log.md  wiki-rules.md
kbase/.giki/: config.yaml
kbase/.giki-state/: sources.json
kbase/sources/: README.md  design-spec.md
kbase/wiki/: cli-commands.md  compilation-pipeline.md  configuration.md  giki.md  github-action-integration.md  limitations-and-roadmap.md  review-pipeline.md
src/giki/: __init__.py  cli.py  config.py  console.py  diff.py  git_utils.py  mcp_server.py  (+5 more)
tests/: conftest.py  test_cli.py  test_commands_branch.py  test_commands_chat.py  test_commands_config.py  test_commands_init.py  test_commands_lint.py  test_commands_pr.py  test_commands_review.py  test_commands_serve.py  test_commands_usage.py  test_config.py  test_cross_page.py  test_decay.py  test_diff.py  test_e2e_ingest.py  test_git_utils.py  test_index_log.py  test_llm_base.py  test_llm_claude.py  test_llm_factory.py  test_llm_openai.py  test_llm_prompts.py  test_llm_retry.py  test_llm_usage.py  test_mcp_server.py  test_orchestrator_phase01.py  test_orchestrator_phase2.py  test_orchestrator_phase34.py  test_orchestrator_phase567.py  test_prompt_contracts.py  test_review_e2e.py  test_review_fmt.py  test_review_mechanical.py  test_review_models.py  test_review_semantic.py  test_rules.py  test_search.py  test_sources_pdf.py  test_sources_state.py  (+8 more)
(+46 files in other folders)
