[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giki"
version = "0.1.0"
description = "Software-engineering approach to LLM Wikis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MeloMei" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "GitPython>=3.1",
    "pypdf>=4.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "vcrpy>=6.0", "respx>=0.21", "reportlab>=4.0"]

[project.scripts]
giki = "giki.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/giki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
